<resources>
    <string name="accent_color">Accent color</string>
    <string name="active_channel_color">Active channel color</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="app_name">Discord Themer</string>
    <string name="bg_color">Background color</string>
    <string name="bg_secondary_color">Secondary background color</string>
    <string name="clear">Clear</string>
    <string name="colors">Colors</string>
    <string name="custom_values">Custom values</string>
    <string name="drawable_colors">Drawable colors</string>
    <string name="drawable_colors_summary">Note: This doesn\'t work if drawable has set tint.</string>
    <string name="edit">Edit</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="filename">Filename</string>
    <string name="force_disable">Force disable module</string>
    <string name="force_disable_summary">You need to force disable module to edit colors</string>
    <string name="import_theme">Import theme</string>
    <string name="input_background_color">Input background color</string>
    <string name="install_discord">You need to install Discord to use this app</string>
    <string name="manifest_editor">Manifest Editor</string>
    <string name="mention_highlight">Mentioned message highlight</string>
    <string name="open_settings">Open settings</string>
    <string name="permission_grant">Grant permission</string>
    <string name="permission_required">You need to grant storage permission to use this app</string>
    <string name="save_settings">Save</string>
    <string name="show_menu">Show menu</string>
    <string name="statusbar_color">Status bar color</string>
    <string name="support_server">Support Server</string>
    <string name="tested_on">Tested on: 115.4</string>
    <string name="theme_editor">Theme Editor</string>
    <string name="xposed_not_detected">Editor Mode: Xposed module isn\'t enabled or resource hooks in xposed settings, if you enabled them, try to reboot your device.\n\nYou can use this app to create themes for Themer plugin only now.</string>

    <string-array name="scope">
        <item>com.aliucord</item>
        <item>com.discord</item>
    </string-array>
</resources>
