<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/tested_on"
        android:enabled="false"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:key="__advanced"
        android:title="@string/advanced_settings"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="simple_settings"
        android:title="@string/simple_settings"
        app:iconSpaceReserved="false"
    >
        <com.aliucord.themer.ColorPreference
            android:key="simple_accent_color"
            android:defaultValue="@color/simple_accent_color"
            android:title="@string/accent_color"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />
        <com.aliucord.themer.ColorPreference
            android:key="mention_highlight"
            android:defaultValue="@color/mention_highlight"
            android:title="@string/mention_highlight"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />
        <com.aliucord.themer.ColorPreference
            android:key="simple_bg_color"
            android:defaultValue="@color/simple_bg_color"
            android:title="@string/bg_color"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />
        <com.aliucord.themer.ColorPreference
            android:key="simple_bg_secondary_color"
            android:defaultValue="@color/simple_bg_secondary_color"
            android:title="@string/bg_secondary_color"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced_settings"
        android:title="@string/advanced_settings"
        app:iconSpaceReserved="false"
    >
        <SwitchPreference
            android:key="__disabled"
            android:title="@string/force_disable"
            android:summary="@string/force_disable_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="custom"
            android:title="@string/custom_values"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="colors"
            android:title="@string/colors"
            android:dependency="__disabled"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="drawables"
            android:title="@string/drawable_colors"
            android:summary="@string/drawable_colors_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
