<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.aliucord.themer.ColorPreference
        android:key="input_background_color"
        android:defaultValue="@color/input_background_color"
        android:title="@string/input_background_color"
        app:cpv_showAlphaSlider="true"
        app:iconSpaceReserved="false" />
    <com.aliucord.themer.ColorPreference
        android:key="statusbar_color"
        android:defaultValue="@color/statusbar_color"
        android:title="@string/statusbar_color"
        app:cpv_showAlphaSlider="true"
        app:iconSpaceReserved="false" />
    <com.aliucord.themer.ColorPreference
        android:key="active_channel_color"
        android:defaultValue="@color/active_channel_color"
        android:title="@string/active_channel_color"
        app:cpv_showAlphaSlider="true"
        app:iconSpaceReserved="false" />
    <com.aliucord.themer.ColorPreference
        android:key="mention_highlight"
        android:defaultValue="@color/mention_highlight"
        android:title="@string/mention_highlight"
        app:cpv_showAlphaSlider="true"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
